--- a/ScifiCons.ipynb
+++ b/ScifiCons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +178,7 @@
        "135      http://www.worldcon.org/  2015-08-19  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "domestic.to_csv('USACons.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -342,7 +353,7 @@
        "121                                  2000-11-24  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +421,7 @@
        " [32.7762719, -96.7968558]]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -435,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -454,7 +465,7 @@
        " 'Dallas']"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -587,7 +598,7 @@
        "121           Dallas, Texas  "
       ]
      },
-     "execution_count": 274,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
